#89 [BE] 리팩토링 (#90)
* refactor: 코드 컨밴션에 맞게 Comment/CommentRepository 리팩토링

* refactor: 코드 컨밴션에 맞게 LabelRepository 리팩토링

* refactor: rowMapper 이름을 컨밴션에 맞게 수정

* refactor(code with me): 코드 컨밴션에 맞게 LabelRepository 리팩토링

* refactor: 코드 컨밴션에 맞게 MemberRepository 리팩토링

* refactor(code with me): 코드 컨밴션에 맞게 MemberRepository 리팩토링

* refactor: 대문자로 시작하는 메서드명 수정

* refactor: SqlParameterSource를 BeanPropertySqlParameterSource로 수정

* refactor(code with me): SqlParameterSource를 BeanPropertySqlParameterSource로 수정

* refactor: 코드 컨밴션에 맞게 MilestoneRepository 리팩토링

* refactor(code with me): 코드 컨밴션에 맞게 MilestoneRepository 리팩토링

* refactor: 코드 컨밴션에 맞게 OrganizationRepository 리팩토링

* refactor(code with me): 코드 컨밴션에 맞게 OrganizationRepository 리팩토링

* refactor: 코드 컨밴션에 맞게 CommentController 리팩토링

* refactor(code with me): 코드 컨밴션에 맞게 CommentController 리팩토링

* refactor: 코드 컨밴션에 맞게 CommonController 리팩토링

* refactor: 코드 컨밴션에 맞게 FilterController 리팩토링

* refactor: 코드 컨밴션에 맞게 IssueController 리팩토링

* refactor(code with me): 코드 컨밴션에 맞게 IssueController 리팩토링

* refactor: 코드 컨밴션에 맞게 LabelController 리팩토링

* refactor(code with me): 코드 컨밴션에 맞게 LabelController 리팩토링

* refactor: 코드 컨밴션에 맞게 MilestoneController 리팩토링

* refactor(code with me): 코드 컨밴션에 맞게 MilestoneController 리팩토링

* refactor: 코드 컨벤션에 맞게 CommentService 리팩토링 및 코드 reformat

* refactor: 코드 컨벤션에 맞게 filterService 리팩토링 및 dto 리팩토링

* refactor:  코드 컨벤션에 맞게 label service 및 dto 리팩토링

* refactor:  코드 컨벤션에 맞게 milestone service 및 dto 리팩토링

* refactor:  코드 컨벤션에 맞게 milestone repository 리팩토링

* refactor: 코드컨벤션에 맞게 filter 리팩토링

* refactor: 코드컨벤션에 맞게 LabelRepositoryImpl 리팩토링

* refactor: 코드 컨벤션에 맞게 MilestoneRepositoryImpl 리팩토링

---------

Co-authored-by: CDBchan <kdjin1215@naver.com>